# packages/shared-types/src/terminology/contracts.ts
@@ -7,3 +7,12 @@ export type Icd10Code = {
   chapter?: string;
   isActive: boolean;
 };
+
+export type Icd9cmCode = {
+  id: string;
+  code: string;
+  display: string;
+  displayIndonesian?: string;
+  category?: string;
+  isActive: boolean;
+};
